@@ -1,75 +1,51 @@
 package com.diagnosticos.Vitalia.infrastructure.config;
 
-import com.diagnosticos.Vitalia.security.CustomUserDetailsService;
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
-@RequiredArgsConstructor
+@EnableWebSecurity
 public class SecurityConfig {
 
-    private final CustomUserDetailsService userDetailsService;
+    // 1. Bean para codificar contraseñas
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
+    // 2. Seguridad básica sin login + CORS
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> {}) // Habilita el bean de CORS
-                .csrf(csrf -> csrf.disable()) // Desactiva CSRF porque es una API
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/usuarios/registrar").permitAll()
-                        .requestMatchers("/api/usuarios").permitAll() // Permite acceso público
-                        .requestMatchers("/api/usuarios/cedula/**").permitAll()
-                        .requestMatchers("/api/usuarios/actualizar/**").permitAll()
-                        .requestMatchers("/api/usuarios/eliminar/**").permitAll()
-
-
-                        .requestMatchers("/api/auth/login").permitAll()
-                        .requestMatchers("/api/registro/paciente").permitAll()
-                        .requestMatchers("/api/registro/medico").hasRole("ADMIN")
-                        .anyRequest().authenticated()
-                )
-                .httpBasic(httpBasic -> {}) // Usa autenticación básica para otras rutas protegidas
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+                .cors(Customizer.withDefaults())  // usa configuración CORS definida abajo
+                .csrf().disable()                // desactiva CSRF para desarrollo/backend API REST
+                .authorizeHttpRequests(auth -> auth.anyRequest().permitAll()); // permite todo
 
         return http.build();
     }
 
-    // Configuración global de CORS
+    // 3. Configuración CORS global
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); // Cambia si despliegas
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true); // Permite enviar cookies o encabezados personalizados
+    public CorsFilter corsFilter() {
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowCredentials(true); // permite credenciales (cookies, auth headers)
+        config.setAllowedOrigins(List.of("http://localhost:4200")); // frontend Angular u otra URL
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
-
-    // AuthenticationManager necesario para login
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
-
-    // Encriptador de contraseñas (BCrypt)
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        source.registerCorsConfiguration("/**", config); // aplica a todas las rutas
+        return new CorsFilter(source);
     }
 }
